pull for feb 8 morn

--- a/homepage/templates/book.html
+++ b/homepage/templates/book.html
@@ -36,7 +36,7 @@
           </table>
         </div>
         <div class="col-md-6 pull-right col-xs-12" style="margin-right:1em;">
-            <a href="/media/{{bookUrl}}.pdf"  target="_blank" ><button class="btn btn-success" style="white-space: normal;padding:0.5em 0.5em">Download {{book.title}} Solutions In PDF</button></a>
+          <a href="/media/{{bookUrl}}.pdf" target="_blank"><button class="btn btn-success" style="white-space: normal;padding:0.5em 0.5em">Download {{book.title}} Solutions In PDF</button></a>
         </div>
         <!-- <div class="col-md-4 col-sm-12 col-xs-12 smdevice">
           <table class="alignintable">
@@ -102,7 +102,9 @@ margin-left: -2.2em;">
         </div>
         {% endverbatim %}
       </div>
-       {% include "forum.html" %}
+      <div style="margin-bottom: 1em;">
+        {% include "forum.html" %}
+      </div>
     </div>
   </div>
 </div>
