--- a/homepage/templates/forum.html
+++ b/homepage/templates/forum.html
@@ -5,20 +5,12 @@
 {% endblock %}
 
 {% block tutorforumcontent %}
-<div>
+<div style="margin-bottom: 1em;">
   <style media="screen">
-      .inputfileholder {
-      overflow: hidden;
-      max-width: 200px;
-      height: 21px;
-      position: relative
-    }
-
-    .inputfileholder .inputfile {
-      position: absolute;
-      left: -90px;
-      outline: none;
-    }
+    input[type=file]{
+    width:0px;
+    color:transparent;
+}
     .areatext{
       width: 75%;
       margin-left: 0.5em;
@@ -72,7 +64,7 @@
 
 
   {% if not request.user.is_authenticated %}
-  <div class="row" style="margin:2em 1em;">
+  <div class="row" style="margin:2em 0;">
     <a href="/signin"><button class="btn btn-primary" style="margin:-0.5em 0 0 0;padding:0.2em 1em;border-radius:0%">Log In to Ask a New Question</button></a>
   </div>
   {% endif %}
@@ -92,10 +84,10 @@
         <form action="/saveForumDetails/" method="post" enctype="multipart/form-data">{% csrf_token %}
           <input name="typ" type="hidden" class="form-control" value="forum">
           <input name="page" type="hidden" class="form-control" value="{{blogname}}">
-          <textarea class="parenttext" rows="3" type="textarea" placeholder='Post a Question Here..' style='resize: none;margin-left:1.2em;' name="txt"></textarea>
+          <textarea class="parenttext" rows="3" type="textarea" id="text" placeholder='Post a Question Here..' style='resize: none;margin-left:1.2em;overflow:hidden' name="txt"></textarea>
           <div class="post" style="padding:0;margin-top: -2px;height:4em;text-align: right">
-            <span style="cursor:pointer; "><i class="fa fa-paperclip" style="font-size:1.5em;margin:0.8em ;" onclick="document.getElementById('selectedFile').click();"></i></span>
-            <input type="file" name="files" style="display: none;" id="selectedFile" >
+            <span style="cursor:pointer; "><label id="fileLabel">Choose File</label><i class="fa fa-paperclip" style="font-size:1.5em;margin:0.8em ;" onclick="document.getElementById('selectedFile').click();" ></i></span>
+            <span><input type="file" name="files" style="display:none;" id="selectedFile" onchange="pressed()"></span>
             <span><button class="btn btn-primary" style="margin:-0.5em 0 0 0;padding:0.2em 1em;border-radius:0%" type="submit">Post</button> </span>
           </div>
         </form>
@@ -154,7 +146,7 @@
             <form action="/saveForumDetails/" method="post">{% csrf_token %}
               <input name="typ" type="hidden" class="form-control" value="comment">
               <input name="parent" type="hidden" class="form-control" value="{{ft.pk}}">
-              <textarea class="areatext" type="textarea" placeholder='Post a Answer Here..' style='resize: none;' name="txt"></textarea>
+              <textarea class="areatext" rows="2" type="textarea" id='area' placeholder='Post a Answer Here..' style='resize: none;overflow:hidden' name="txt"></textarea>
               <div class="send " style="padding:0;margin-top: -2px;height:4em;text-align: right;margin-left: 0;">
                 <button class="btn btn-primary" style="margin:0.7em 0 0 0;padding:0.2em 1em;border-radius:0%" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
               </div>
@@ -192,7 +184,6 @@
       </div>
       {% endif %}
       {% endfor %}
-      <!-- style="{% if not forloop.counter|divisibleby:2 %}background-color:#F2F2F2{% endif %};" -->
     </div>
 
   </div>
@@ -201,5 +192,31 @@
 
 
 </div>
+<script type="text/javascript">
+window.pressed = function(){
+    var a = document.getElementById('selectedFile');
+    if(a.value == "")
+    {
+        fileLabel.innerHTML = "Choose file";
+    }
+    else
+    {
+        var theSplit = a.value.split('\\');
+        fileLabel.innerHTML = theSplit[theSplit.length-1];
+    }
+};
+var textarea = document.getElementById("text");
+var text = document.getElementById("area");
+var limit = 150;
+
+textarea.oninput = function() {
+  textarea.style.height = "";
+  textarea.style.height = Math.min(textarea.scrollHeight, limit) + "px";
+};
+text.oninput = function() {
+  text.style.height = "";
+  text.style.height = Math.min(text.scrollHeight, limit) + "px";
+};
+</script>
 
 {% endblock %}
