--- a/support/templates/app.feedbackEmail.html
+++ b/support/templates/app.feedbackEmail.html
@@ -249,7 +249,7 @@
         <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container">
           <tr height="30">
             <th align="center">
-                <h2> <a  style="color:rgb(0, 119, 204)" href={{link}}> Click Here </a> <h2>
+                <h2> <a  style="color:rgb(0, 119, 204)" href={{link}}> Here </a> <h2>
             </th>
           </tr>
         </table>
