--- a/homepage/templates/exam.html
+++ b/homepage/templates/exam.html
@@ -124,11 +124,9 @@
           </table>
         </div>
         <div class="col-md-12 text-center" style="margin-top: 10em;">
-          <button class="btns">Instructions</button>
+          <button class="btns" ng-click="showinstrctions()">Instructions</button>
         </div>
-        <div class="col-md-12 text-center">
-          <button class="btns">Questions</button>
-        </div>
+
         <div class="col-md-12 text-center">
           <button class="btns" ng-click="finish(selections,subquestions)">Finish</button>
         </div>
