--- a/homepage/templates/ncertSolutions.html
+++ b/homepage/templates/ncertSolutions.html
@@ -2,7 +2,7 @@
 
 {% block tutorcontent %}
 
-<div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/24tut/unnamed.jpg');background-size:100% 135%;">
+<div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/ncert-solutions.png');background-size:cover;">
   <div class="col-md-12" style="padding-top:14%;padding-left:8%;">
     <span style="color:#fff;font-size:4em;font-weight:bolder;">NCERT Solutions</span><br>
     <span class="u_line"></span>
