--- a/homepage/templates/ncertSolutions.html
+++ b/homepage/templates/ncertSolutions.html
@@ -2,9 +2,9 @@
 
 {% block tutorcontent %}
 
-<div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/24tut/unnamed.jpg');background-size:100% 135%;">
+<div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/24tut/unnamed.jpg');background-size:cover;">
   <div class="col-md-12" style="padding-top:14%;padding-left:8%;">
-    <span style="color:#fff;font-size:4em;font-weight:bolder;">NCERT Solutions</span><br>
+    <h1 style="color:#fff;font-size:4em;font-weight:bolder;">NCERT Solutions</h1>
     <span class="u_line"></span>
     <h5 style="color:#fff;">Home / NCERT Solutions</h5>
   </div>
