--- a/homepage/templates/aboutUs.html
+++ b/homepage/templates/aboutUs.html
@@ -73,7 +73,7 @@
         <img src="/static/images/24tut/sci_w.png" class="pro_img" width="40%">
         <img src="/static/images/24tut/sci.png" class="pro_over_img" width="40%">
         <div class="pro_title text-center">
-          <span class="pro_num">03</span> <span class="pro_head" style="color:#fff">Experiment</span>
+          <span class="pro_num">03</span> <span class="pro_head" style="color:#fff">Practice</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
           <span class="pro_descrp">Attempt unlimited numbers of mock test when you feel you need to.</span>
         </div>
@@ -108,13 +108,20 @@
       <h2 class="heading_medium">Promoting Good Education since the Very beginning</h2>
       <span class="u_line"></span>
       <div class="min_padd">
-        <span class="heading_small" style="line-height:1.7;">We never ask for money. When you feel you need to talk to a tutor then we will be here to help.</span>
+        <span class="heading_small" style="line-height:1.7;">We promise to connect you to the best tutor in India.</span>
       </div>
       <div class="min_padd">
         <h3> <b>Our Partners</b> </h3>
         <div class="row">
-          <img src="/static/images/24tut/partner1.svg" width="25%" class="partners">
-          <img src="/static/images/24tut/partner2.png" width="25%" class="partners">
+          <div class="col-md-4">
+            <img src="/static/images/24tut/partner1.svg">
+          </div>
+          <div class="col-md-3">
+            <img src="/static/images/24tut/partner2.png" style="width:100%;">
+          </div>
+          <div class="col-md-4">
+            <img src="/static/images/monomerce.svg" style="width:100%;">
+          </div>
         </div>
       </div>
     </div>
@@ -123,6 +130,8 @@
     </div>
   </div>
 </div>
+
+
 
 {% endverbatim %}
 {% endblock %}
