--- a/homepage/templates/ncertSolutions.html
+++ b/homepage/templates/ncertSolutions.html
@@ -11,9 +11,8 @@
 </div>
 <div class="container-fluid">
   <div class="col-md-8 col-md-offset-2 min_padd text-center">
-    <span style="font-size:1.2em;line-height:1.5;"="heading_small">
-      Here you can download the latest version of solutions for all questions from NCERT or CBSE text book as per CBSE marking scheme pattern. 24Tutors is one stop solution. NCERT Solutions for class 10 ,
-      11 & 12 can be access through the links below.</span>
+    <p style="font-size:1.2em;line-height:1.5;"="heading_small">
+      Here you can download the latest version of solutions for all questions from NCERT or CBSE textbook as per CBSE marking scheme pattern. 24Tutors is one stop solution. NCERT Solutions for class 10, 11 & 12 can be accessed through the links below.</p>
   </div>
 </div>
 <div class="container-fluid">
@@ -63,6 +62,124 @@
     </div>
   </div>
 </div>
+
+
+<div class="container-fluid">
+  <div class="col-md-8 col-md-offset-2 min_padd">
+    <h4> <strong>How to use these sets of NCERT Solutions</strong> </h3>
+    <span class="u_line"></span>
+
+    <p style="margin-top:20px;">Before we go to how you can utilize 24tutors.com free resources in your studies first let's see why it is important to solve the NCERT books :  </p>
+    <ul>
+      <li> The very first reason will be that it is the official books for CBSE Board exams </li>
+      <li>These books are the result of years of research at NCERT, CBSE, IITs and many regional institutes and contains many important concepts which are good not only for school exam preparation but also to be prepared for any engineering course you might join after your 12th Board exams </li>
+      <li>It also contain most of the foundation courses for many engineering courses like the chapter of Electricity and Magnetism (class 12) will help all future Electrical Engineering students understand the college level courses better. </li>
+      <li> It gives important mathematical / statistics knowledge which will help in your day to day work in future such as Investment / Banking and Planning </li>
+    </ul>
+    <p>
+     Even before we go further let's look an interesting fact. The chapters you will be learning in class 9 is actually a small replica of chapters in class 11 and similarly, class 10 chapters are a replica of class 12 chapters. If you agree to this unnoticed concept do consider sharing this page on facebook to let your friends know this cool fact.
+    </p>
+
+    <p>Okay, enough of these discussion lets jump to the main content, First lets start for class 10 </p>
+
+    <h4> <strong>For class 10</strong> </h3>
+    <span class="u_line"></span>
+
+    <p style="margin-top:20px;">
+      Overall the class 10 is to teach future engineers and doctors things like
+    </p>
+
+    <ul>
+      <li>Functions (mostly in 1 variable)</li>
+      <li> Series and sets (Arithmetic progression, Geometric progression, etc) </li>
+      <li>Triangles and Geometry (questions like finding the distance between points in 2D) which later in class 12 expanded to distance between a point and a plane in 3D </li>
+      <li>Trigonometry (There are actually more than 10 trigonometric identities but don't worry here you have only 3, Cheers) </li>
+      <li>And finally concluding the syllabus to the area of shapes and probability</li>
+    </ul>
+    <p>Other than getting marks this is the right time to actually think in terms of your career, like which profession you want to have by choosing either Science / Commerce / Arts stream. So explore your interest and make a good decision, not because of just peer/parental pressure but what you actually want. For Example, if you want to work in NASA or ISRO you will need to take Aerospace Engineering in college and for that be sure to choose Science class in your class 11 and class 12. </p>
+
+    <p>On the other hand in Science, the curriculum is divided into 5 sections</p>
+    <ul>
+      <li>Chemical substances - Nature and behavior (learning how acid, bases, metals etc reacts with each other and other chemically active substances)</li>
+      <li>World of living (if you have wondered how is a living creature is different then other non-living creature then you will get all your questions answered in this chapter ) </li>
+      <li>Natural Phenomena</li>
+      <li>Effects of current (these chapters will introduce you resistors, voltage, current etc) </li>
+      <li>And finally Natural Resources</li>
+    </ul>
+
+    <h4> <strong>Now let's look at class 11 curriculum </strong> </h3>
+    <span class="u_line"></span>
+
+    <p style="margin-top:20px;">
+      Hopefully, if you have selected science stream by this time and you may be learning about many engineering exams like IIT JEE Mains and Advance or in case you have taken Biology instead of mathematics you will be learning about AIIMS and other medical college admission process. So let's see how your 11th class is actually designed:
+    </p>
+
+    <p>I will start with Physics (truly speaking, the easiest subject to score) where you will be extending the knowledge you gained in class 9 with these chapters:</p>
+
+
+
+    <ul>
+      <li>First, we will start by learning the measurement units and more importantly the precision with which we can measure </li>
+      <li>Next comes the mechanics where you will calculate how a body motion properties are calculated like acceleration, velocity, and distances. You will also see how the frame of reference can help you solve many real-life scenarios etc. All these without worring about the force behind it.</li>
+      <li>Now if you have guessed it right yes its Laws of Motion. So far you never looked how the force is acting and how it can impact the existing speed/velocity but now you will be able to understand those details when it comes to objects and their motion.</li>
+      <li> Work done and energy </li>
+      <li>The motion of systems of particles and Rigid Body</li>
+      <li>Gravitation (if you want to become an astronaut, master this chapter 100%)</li>
+      <li>Properties of matter</li>
+      <li>Thermodynamics</li>
+      <li>How gasses behave when you add heat or extract heat from a system</li>
+      <li>Mechanical waves and Ray optics</li>
+    </ul>
+
+    <p>Now let's see what's in there in Maths for us. As I told you already that class 11 is kind of replica of class 9 concepts, here is the broad topic you will learn</p>
+
+    <ul>
+      <li>Sets and Functions</li>
+      <li>Algebra ( this time we will work with equations with 2 variables as well)</li>
+      <li>Coordinate Geometry (Remember the distance between two points ? they are now in 3D )</li>
+      <li>Calculus, At first you will see it as if you have never seen it before and find it difficult to get it into your head but trust me it's easy. Things like continuity, differentiability are broad concepts you will learn </li>
+      <li>Mathematical Reasoning</li>
+      <li>Statistics and Probability</li>
+
+    </ul>
+
+    <p>If you are thinking how important is this class 11 curriculum and how much weightage it has in future exams like engineering exams etc then I must tell you that please do not ignore or skip the important topic this year , in fact as per the stats there is a consistent weightage of 45% for the chapter in class 11 in IIT JEE Mains and Advance. Below is a graph of the distribution of the marks across the topics for IIT JEE examination and most of the questions especially in Chemistry comes straight from NCERT book and these NCERT solutions will help you get them right. </p>
+
+    <h4> <strong>For class 12 </strong> </h3>
+    <span class="u_line"></span>
+
+    <p style="margin-top:20px;">
+      Let's look at the glorified version of class 10 syllabus. In class 12 Maths you will learn the following subjects:
+    </p>
+    <ul>
+      <li>Inverse Trigonometric Functions</li>
+      <li>Matrices</li>
+      <li>Application of Derivatives</li>
+      <li>Integrals</li>
+      <li>Application of Integrals</li>
+      <li>3D Geometry</li>
+      <li>Probability</li>
+    </ul>
+    <p>If you have noticed class 12 maths can not be mastered without the help of class 11 syllabus to I recommend you to keep the notes of class 11 handy all the time </p>
+
+    <p>Now let's see the syllabus for class 12 Physics</p>
+    <ul>
+      <li>Electrostatics</li>
+      <li>Current Electricity</li>
+      <li>Magnetic Effects of Current and Magnetism</li>
+      <li>EM Waves</li>
+      <li>Optics</li>
+      <li>Dual nature of Radiation and Matter</li>
+      <li>Electronic Devices </li>
+      <li>Atoms and Nuclei (in my opinion the concepts are very similar to the atomic structure chapter from chemistry)</li>
+      <li>Communication Systems</li>
+    </ul>
+
+    <p>If you are wondering why we don't have some insight on chemistry then I must tell you that we have not created the content for chemistry and we are working on it. But one thing I can say is for chemistry you should and must kind of memorize all of the points from NCERT book. No need to follow any other book. Yes, we do need some extra book like Arihant's Organic Chemistry but only for practice.</p>
+
+  </div>
+</div>
+
 
 {% endblock %}
 
