--- a/homepage/templates/aboutUs.html
+++ b/homepage/templates/aboutUs.html
@@ -117,7 +117,7 @@
             <img src="/static/images/24tut/partner1.svg">
           </div>
           <div class="col-md-3">
-            <img src="/static/images/24tut/partner2.png" style="width:100%;">
+            <img src="/static/images/24tut/partner2.png" style="width:60px">
           </div>
           <div class="col-md-4">
             <img src="/static/images/monomerce.svg" style="width:100%;">
@@ -130,6 +130,36 @@
     </div>
   </div>
 </div>
+
+<div class="row" style="min-height:60vh;margin-top:0px;padding-top: 0px;position:relative;">
+  <div class="col-md-10 col-md-offset-1" style="padding-top:6rem;">
+    <div class="col-md-5 col-md-offset-1 min_padd">
+      <h2 class="heading_medium">Here you’ll find everything you might be interested in if you want to invest in 24tutors.com</h2>
+      <span class="u_line"></span>
+      <div class="min_padd">
+        <span class="heading_small" style="line-height:1.7;"> At 24tutors, the 3 main core values we have are  </span>
+
+        <ul>
+          <li>Customer's satisfaction</li>
+          <li>Employee's satisfaction</li>
+          <li>Investors's satisfaction</li>
+        </ul>
+
+      </div>
+
+      <div class="min_padd">
+        <span class="heading_small" style="line-height:1.7;"> 24tutors.com is governed and operated by our parent company CIOC as a subsidiary. We started working this platform with the help our vision fund in 2016. So far we have served thousands of students from India and US market with the help of our state of the art whiteboard technology and voice/video infrastructure. Developing a fully integrated system from scratch was no easy task and with this proven and time tested technology platform we aspire to revolutionize the Indian Edutech segment.</span>
+      </div>
+      <span class="u_line"></span>
+      <div class="min_padd">
+        <span class="heading_small" style="line-height:1.7;"> If you want to reach out to our management team and have access to some of the reports then please write us at  <span class="text-primary">directors@24tutors.com</span> </span>
+      </div>
+
+
+  </div>
+</div>
+
+
 
 
 
