--- a/homepage/templates/policy.html
+++ b/homepage/templates/policy.html
@@ -13,13 +13,13 @@
         </div>
         <div class="container-fluid" style="margin-left:40px;padding:0px;margin-bottom:20px;">
           <h4>Your website may use the Privacy Policy given below: </h4>
-          <p>The terms "We" / "Us" / "Our"/”Company” individually and collectively refer to <strong>{{brandName}}</strong> (CIOC FMCG Pvt Ltd) and the terms "You" /"Your" / "Yourself" refer to the users.<br>
+          <p>The terms "We" / "Us" / "Our"/”Company” individually and collectively refer to <strong> 24tutors.com </strong> (CIOC FMCG Pvt Ltd) and the terms "You" /"Your" / "Yourself" refer to the users.<br>
 
             This Privacy Policy is an electronic record in the form of an electronic contract formed under the information Technology Act, 2000 and the rules made thereunder and the amended provisions pertaining to electronic documents / records in
             various statutes as amended by the information Technology Act, 2000. This Privacy Policy does not require any physical, electronic or digital signature.<br>
 
-            This Privacy Policy is a legally binding document between you and <strong>{{brandName}}</strong> (both terms defined below). The terms of this Privacy Policy will be effective upon your acceptance of the same (directly or indirectly in
-            electronic form, by clicking on the I accept tab or by use of the website or by other means) and will govern the relationship between you and <strong>{{brandName}}</strong> for your use of the website “Website” (defined below).<br>
+            This Privacy Policy is a legally binding document between you and <strong> 24tutors.com </strong> (both terms defined below). The terms of this Privacy Policy will be effective upon your acceptance of the same (directly or indirectly in
+            electronic form, by clicking on the I accept tab or by use of the website or by other means) and will govern the relationship between you and <strong> 24tutors.com </strong> for your use of the website “Website” (defined below).<br>
 
             This document is published and shall be construed in accordance with the provisions of the Information Technology (reasonable security practices and procedures and sensitive personal data of information) rules, 2011 under Information
             Technology Act, 2000; that require publishing of the Privacy Policy for collection, use, storage and transfer of sensitive personal data or information.<br>
@@ -61,7 +61,7 @@
           <p>Redressal Mechanism: Any complaints, abuse or concerns with regards to content and or comment or breach of these terms shall be immediately informed to the designated Grievance Officer as mentioned below via in writing or through email
             signed with the electronic signature to <strong>Sandeep Yadav</strong> ("Grievance Officer").</p><br><br>
           <span> <strong>Mr. Sandeep Yadav (Grievance Officer)</strong> <br>
-            {{brandName}} <br>
+             24tutors.com  <br>
             <span>4th Floor, Venkateshwara Heritage,Kudlu Hosa Road, Opp Sai Purna Premium Apartment,</span><br>
             <span>Sai Meadows Kudlu,Bengaluru,</span><br>
             <span>Karnataka 560068</span> <br>
