--- a/homepage/templates/terms.html
+++ b/homepage/templates/terms.html
@@ -12,8 +12,8 @@
           <h2>TERMS AND CONDITIONS</h2>
         </div>
         <div class="container-fluid" style="margin-left:40px;padding:0px;padding-bottom:20px;">
-          <p>The terms "We" / "Us" / "Our"/”Company” individually and collectively refer to <strong>{{brandName}}</strong> (CIOC FMCG Pvt Ltd) and the terms "Visitor” ”User” refer to the users.<br><br>This page states the Terms and Conditions under
-            which you (Visitor) may visit this website (<strong>{{brandName}}</strong>). Please read this page carefully. If you do not accept the Terms and Conditions stated here, we would request you to exit this site. The business, any of its
+          <p>The terms "We" / "Us" / "Our"/”Company” individually and collectively refer to <strong> 24tutors.com </strong> (CIOC FMCG Pvt Ltd) and the terms "Visitor” ”User” refer to the users.<br><br>This page states the Terms and Conditions under
+            which you (Visitor) may visit this website (<strong> 24tutors.com </strong>). Please read this page carefully. If you do not accept the Terms and Conditions stated here, we would request you to exit this site. The business, any of its
             business divisions and / or its subsidiaries, associate companies or subsidiaries to subsidiaries or such other investment companies (in India or abroad) reserve their respective rights to revise these Terms and Conditions at any time by
             updating this posting. You should visit this page periodically to re-appraise yourself of the Terms and Conditions, because they are binding on all users of this Website.</p><br><br>
           <h4>USE OF CONTENT</h4>
@@ -32,7 +32,7 @@
             is libellous, defamatory, pornographic, profane, obscene, threatening, abusive or hateful.</p><br><br>
           <h4>INDEMNITY</h4>
           <p>The User unilaterally agree to indemnify and hold harmless, without objection, the Company, its officers, directors, employees and agents from and against any claims, actions and/or demands and/or liabilities and/or losses and/or
-            damages whatsoever arising from or resulting from their use of <strong>{{brandName}}</strong> or their breach of the terms .</p><br><br>
+            damages whatsoever arising from or resulting from their use of <strong> 24tutors.com </strong> or their breach of the terms .</p><br><br>
           <h4>LIABILITY</h4>
           <p>User agrees that neither Company nor its group companies, directors, officers or employee shall be liable for any direct or/and indirect or/and incidental or/and special or/and consequential or/and exemplary damages, resulting from the
             use or/and the inability to use the service or/and for cost of procurement of substitute goods or/and services or resulting from any goods or/and data or/and information or/and services purchased or/and obtained or/and messages received
