--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -371,7 +371,6 @@
 
   {% block tutorjs %}
   <script type="text/javascript">
-    { % include "app.tutor.common.js" %
-    }
+    { % include "app.tutor.common.js" %}
   </script>
   {% endblock %}
