--- a/homepage/templates/discoverCourses.html
+++ b/homepage/templates/discoverCourses.html
@@ -48,7 +48,6 @@
 
 {% block tutorjs %}
 <script type="text/javascript">
-  { % include "app.tutor.common.js" %
-  }
+  { % include "app.tutor.common.js" %}
 </script>
 {% endblock %}
