--- a/homepage/templates/ncertSolutions.html
+++ b/homepage/templates/ncertSolutions.html
@@ -145,6 +145,8 @@
 
     <p>If you are thinking how important is this class 11 curriculum and how much weightage it has in future exams like engineering exams etc then I must tell you that please do not ignore or skip the important topic this year , in fact as per the stats there is a consistent weightage of 45% for the chapter in class 11 in IIT JEE Mains and Advance. Below is a graph of the distribution of the marks across the topics for IIT JEE examination and most of the questions especially in Chemistry comes straight from NCERT book and these NCERT solutions will help you get them right. </p>
 
+    <img src="/static/images/questions-distribution.png" alt="comparision of number of questions in IIT JEE">
+
     <h4> <strong>For class 12 </strong> </h3>
     <span class="u_line"></span>
 
@@ -176,6 +178,60 @@
     </ul>
 
     <p>If you are wondering why we don't have some insight on chemistry then I must tell you that we have not created the content for chemistry and we are working on it. But one thing I can say is for chemistry you should and must kind of memorize all of the points from NCERT book. No need to follow any other book. Yes, we do need some extra book like Arihant's Organic Chemistry but only for practice.</p>
+
+    <h4> <strong>How to use NCERT Solutions</strong> </h3>
+    <span class="u_line"></span>
+    <p style="margin-top:20px;">
+      Many students have asked, "how to use NCERT Solutions for best results ?". To answer this let's assume that you are also preparing for JEE Mains and Advance and you might have joined a coaching institute as well then at what stage you would use NCERT ? at the beginning or at the end ?.
+    </p>
+
+    <p>Let's take each option one by one. First, if you solve all the questions in NCERT first then I must tell you that your boards percentage are secured and you also have developed the following skills </p>
+    <ul>
+      <li>The mentality to solve long questions like integration by substitution 2-3 times. </li>
+      <li>Foreseeing the results from a very far and strategize your approach.</li>
+      <li>Fewer calculation mistakes while solving the problem like quoting wrong numbers from the question in your calculations</li>
+    </ul>
+
+    <p>Now, what if you decide to go through NCERT book at the end of the year ?. You see the way the CBSE or any other boards exams are designed is to test the in-depth knowledge of a student. The questions are not hard but test multiple concepts in the same question like knowledge of trigonometry in case of integrations and on the other hand, the competitive exams try to understand if the student is fast enough to apply the same concept in a totally different scenario which requires even in depth knowledge of the subject matter. The questions will be short and most of the time students try to do some tricks like the elimination method etc. </p>
+
+    <p>We did a survey of 357 students from IIT Bombay and 307 students in IIT Kanpur asking their approach during the exams and the below graph can pretty much explain itself.</p>
+
+    <img src="/static/images/ncert-solutions-iit-servey.png" alt="ncert solutions survey amongst the IIT students">
+
+    <p>As we can see that 74.70 % IITians says that they solved the NCERT first.</p>
+
+
+
+    <p>Okay now as per our study here is the key learnings you get when you attempt NCERT book at the end of the year:</p>
+    <ul>
+      <li>Not able to spend more time on lengthy questions (kind of sense of urgency to get the answer) </li>
+      <li>Not able to formulate a strategy</li>
+      <li>Miss calculations</li>
+    </ul>
+
+    <h4> <strong>How our NCERT solutions are designed to help you</strong> </h3>
+    <span class="u_line"></span>
+    <p style="margin-top:20px;">After working for almost a year I am happy to announce that the solutions are ready now. This section is divided into 4 groups for class 9 to class 12. From the above list you can click the book you want to check. The following view will be shown:
+    </p>
+
+    <img src="/static/images/24tutors-book-view.png" width="450" alt="24tutors book view sample">
+    <p>Here you can either download the entire book solutions in PDF format or select one of the chapter to read the solutions online. If you click on one the chapter you will be presented the following view:</p>
+
+    <div class="row">
+      <div class="col-md-4">
+        <img src="/static/images/24tutors-chapter-navigator.png" width="450" alt="24tutors chapter navigator">
+      </div>
+      <div class="col-md-4">
+        <img src="/static/images/24tutors-chapter-view.png" width="450" alt="24tutors chapter view">
+      </div>
+    </div>
+
+    <p>In the images above, on left you can see the navigator with shortcut buttons to any question and also links to other chapters and on the right you can see one the chapter opened with PDF download option on the top.</p>
+
+    <h4> <strong>Conclusion</strong> </h3>
+    <span class="u_line"></span>
+    <p style="margin-top:20px;">Most of the time students don't realize that its a relative comparison during the exams for example, if there is a question out of NCERT curriculum in IIT JEE then probably no student will be able to do it anyway so the best bet for everyone is to be at par with the official syllabus. Yes, within these books there are chapters which may not hold much importance but this is it, I mean you master NCERT then I am giving you guarantee that you will be listed in toppers list. </p>
+
 
   </div>
 </div>
